--- a/src/components/catalog/CatalogStyles.css
+++ b/src/components/catalog/CatalogStyles.css
@@ -1,57 +1,14 @@
-.item-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
+.catalog-page {
+  background-color: transparent;
+  overflow: hidden;
+  padding: 40px;
+  height: auto;
+  width: auto;
 }
 
-.item-content {
-  display: flex;
-  align-items: center;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
-  padding: 20px;
-  width: 800px;
-  height: 180px;
-  transition: all 0.2s ease;
-}
-
-.box-content:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transform: translateY(-2px);
-}
-
-.box-image {
-  width: 140px;
-  height: 140px;
-  object-fit: cover;
-  border-radius: 20%;
-  margin-right: 20px;
-}
-
-.box-title {
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.box-description {
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-.box-button {
-  background-color: #f0ad4e;
-  border-color: #eea236;
-  margin-left: auto;
-  font-size: 16px;
-  padding: 6px 12px;
-  border-radius: 3px;
-  transition: all 0.2s ease;
-}
-
-.box-button:hover {
-  background-color: #eea236;
-  border-color: #eea236;
+.background-image {
+  background-image: url(https://www.zdnet.com/a/img/resize/1f800d459b30d2a57142a6afff3b84150c2c5562/2022/04/29/7bfb96c0-773e-4caa-8018-b97bd1856e61/best-all-in-one-computer.jpg?auto=webp&fit=crop&height=900&width=1200);
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
 }
