--- a/src/components/home/HomeStyles.css
+++ b/src/components/home/HomeStyles.css
@@ -1,32 +1,20 @@
 .home-container {
-    position: relative;
-    width: 100%;
-    height: 93.4vh;
-    overflow: hidden;
-  }
-  
+  background-color: transparent;
+  overflow: hidden;
+  height: 100vh;
+  width: auto;
+  background-image: url("/public/images/Home.jpg");
+}
 
-  .background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: url('/public/images/Home.jpg'); 
-    background-size: cover;
-    background-position: center;
-    
-  }
-  
-  .info {
-    position: absolute;
-    top: 30%;
-    left: 100px;
-    color: orange;
-    padding-right: 40%;
-  }
+.info {
+  position: absolute;
+  top: 30%;
+  left: 100px;
+  color: orange;
+  padding-right: 40%;
+}
 
-  .info h3{
-    margin-top: 50px;
-    color: rgb(33,37,41)
-  }
+.info h3 {
+  margin-top: 50px;
+  color: rgb(245, 244, 245);
+}
