--- a/src/components/login/LoginStyles.css
+++ b/src/components/login/LoginStyles.css
@@ -2,24 +2,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 93.4vh;
-  position: relative;
-}
-
-.login-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background:linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 20%,
-    rgba(255, 255, 255, 1)
-  ), url(https://wallpaperaccess.com/full/1325090.jpg);
+  height: 100vh;
   background-size: cover;
-
+  background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0) 20%,
+      rgba(255, 255, 255, 1)
+    ),
+    url(https://wallpaperaccess.com/full/1325090.jpg);
 }
+
 .login-box {
   position: relative;
   width: 30%;
@@ -61,24 +53,23 @@ button:hover {
 }
 
 .registerLink {
- position: absolute;
+  position: absolute;
   text-decoration: none;
   font-size: 16px;
   font-weight: bold;
   left: 73%;
-  top: 85%
-  ;
+  top: 85%;
 }
 
 .registerLink:hover {
   color: lightcoral;
 }
 
-h6{
-    position: absolute;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-    left: 9%;
-    top: 85%
+h6 {
+  position: absolute;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  left: 9%;
+  top: 85%;
 }
