--- a/src/components/register/RegisterStyles.css
+++ b/src/components/register/RegisterStyles.css
@@ -2,22 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 93.4vh;
-  position: relative;
-}
-
-.register-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-
-  background: 
+  height: 100vh;
+  background: linear-gradient(
+      to bottom,
+      rgba(0, 5, 10, 0.2)20%,
+      rgba(120, 122, 123, 0.5)
+    ),
     url(https://i0.wp.com/www.kaldata.com/wp-content/uploads/2021/03/Apple-M1X-32-core-CHIP-scaled.jpg?fit=2048%2C1152&ssl=1);
-    background-size: cover ;
-    filter: blur(2px);
+  background-size: cover;
 }
 
 .register-box {
