--- a/src/components/login/LoginStyles.css
+++ b/src/components/login/LoginStyles.css
@@ -19,6 +19,7 @@
   background-color: #f0f0f0;
   border-radius: 5px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  padding-bottom: 60px;
 }
 
 h2 {
@@ -58,7 +59,7 @@ button:hover {
   font-size: 16px;
   font-weight: bold;
   left: 73%;
-  top: 85%;
+  top: 88%;
 }
 
 .registerLink:hover {
@@ -71,5 +72,5 @@ h6 {
   font-size: 16px;
   font-weight: bold;
   left: 9%;
-  top: 85%;
+  top: 88%;
 }
