--- a/src/components/catalog/CatalogStyles.css
+++ b/src/components/catalog/CatalogStyles.css
@@ -12,3 +12,11 @@
   background-size: cover;
   min-height: 100vh;
 }
+
+.no-ads {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 140px;
+}
